--- a/DashFood/DashFood/Pages/Restaurants/Edit.cshtml
+++ b/DashFood/DashFood/Pages/Restaurants/Edit.cshtml
@@ -4,5 +4,25 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Editing @Model.Restaurant.Name</h2>
+
+<form action="/" method="post">
+
+    <input type="hidden" asp-for="Restaurant.Id" />
+    <div class="form-group">
+        <label asp-for="Restaurant.Name"></label>
+        <input asp-for="Restaurant.Name" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="Restaurant.Location"></label>
+        <input asp-for="Restaurant.Location" class="form-control" />
+    </div>
+    <div class="form-group">
+        <label asp-for="Restaurant.Cousine"></label>
+        <select asp-for="Restaurant.Cousine" class="form-control" asp-items="@Model.Cuisines">
+            <option value="value">text</option>
+        </select>
+    </div>
+    <button type="submit" class="btn btn-primary">Save</button>
+</form>
 
